--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ url: "https://shin-sec.tk"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: ne0shi Website
+title: Shin Website
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Shin-sec blog
 
 # --- Navigation bar options --- #
 
