--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ url: "https://shin-sec.tk"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Shin Website
+title: Shin's blog
 
 # Short description of your site
-description: Shin-sec blog
+description: Goal to success
 
 # --- Navigation bar options --- #
 
