--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Menu:
     - Learn markdown: "http://www.markdowntutorial.com/"
+    - Goals: "https://www.shin-sec.tk/goals
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -71,7 +72,7 @@ social-network-links:
   rss: false
   email: "odax311@gmail.com"
   
-  github: ne0shi
+  github: 0xShin
   twitter: WalfordShin
 #  reddit: yourname
 #  google-plus: +DeanAttali
