--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Menu:
     - Learn markdown: "http://www.markdowntutorial.com/"
-    - Goals: "https://www.shin-sec.tk/goals
+    - Goals: "goals"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
